--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <header>
-    <div id="marca">
+    <nav id="marca">
       <h1>DROPS</h1>
-    </div>
-    <div id="posicaoList">
+    </nav>
+    <nav id="posicaoList">
       <ul id="tamanholista">
         <li class="buttoncab">
           <a class="topiclist" href="#">Home</a>
@@ -34,7 +34,22 @@
           <a class="topiclist" href="#">Contact Us</a>
         </li>
       </ul>
-    </div>
+    </nav>
   </header>
-  <body></body>
+  <body>
+    <main>
+      <article>
+        <h1>Dropdown</h1>
+        <br />
+        <p>
+          Dropdown, ou menu suspenso, é um elemento de interface gráfica que
+          exibe uma lista de opções após um clique em um botão ou elemento
+          acionador, economizando espaço na tela ao ocultar a lista de itens até
+          que sejam necessários. Esse recurso é amplamente utilizado em sites e
+          aplicativos para selecionar valores de listas longas, como países em
+          um formulário, ou para apresentar opções contextuais.
+        </p>
+      </article>
+    </main>
+  </body>
 </html>
